tests/snapshots/integration__integration_tests__config_update_pty__config_update_prompt_decline.snap
---
source: tests/integration_tests/config_update_pty.rs
expression: "&output"
---
[33m▲[39m [33mUser config: template variable [1mrepo_root[22m is deprecated in favor of [1mrepo_path[22m[39m
[33m▲[39m [33mUser config: template variable [1mmain_worktree[22m is deprecated in favor of [1mrepo[22m[39m
[2m○[22m Proposed diff:
[107m [0m [1mdiff --git a/test-config.toml/current b/test-config.toml/migrated[m
[107m [0m [1mindex d95d100..ceb381d 100644[m
[107m [0m [1m--- a/test-config.toml/current[m
[107m [0m [1m+++ b/test-config.toml/migrated[m
[107m [0m [36m@@ -1,2 +1,2 @@[m
[107m [0m [31m-worktree-path = "../{{ main_worktree }}.{{ branch }}"[m
[107m [0m [31m-post-create = "ln -sf {{ repo_root }}/node_modules"[m
[107m [0m [32m+[m[32mworktree-path = "../{{ repo }}.{{ branch }}"[m
[107m [0m [32m+[m[32mpost-create = "ln -sf {{ repo_path }}/node_modules"[m

[36m❯[39m Apply updates? [1m[y/N/?][22m n
[2m○[22m Update cancelled
